--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,2 +1,9 @@
 @import "tailwindcss";
 @import "@nuxt/ui";
+
+@theme{
+    --container-8xl: 90rem;
+}
+:root {
+    --ui-container: var(--container-8xl);
+}
